--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "type": "git",
     "url": "git://github.com/vikeen/music-tribe.git"
   },
+  "engines": {
+    "node": "5.3.0"
+  },
   "dependencies": {
+    "babel": "5.8.23",
     "bluebird": "3.1.1",
     "hoek": "3.0.4",
     "lodash": "3.10.1",
