--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "babel": "5.8.23",
     "bluebird": "3.1.1",
     "bootstrap": "3.3.6",
+    "bootstrap-social": "4.11.0",
+    "font-awesome": "4.5.0",
     "forwarded": "0.1.0",
     "hoek": "3.0.4",
     "jquery": "2.2.0",
