--- a/package.json
+++ b/package.json
@@ -21,12 +21,9 @@
     "jquery": "2.2.0",
     "lodash": "3.10.1",
     "passport": "0.3.2",
-    "passport-amazon-token": "2.0.1",
     "passport-facebook-token": "3.1.0",
-    "passport-google-plus-token": "2.0.1",
     "passport-jwt": "1.2.1",
     "passport-local": "1.0.0",
-    "passport-soundcloud-token": "2.0.1",
     "passport-twitter-token": "1.1.0",
     "pluralize": "1.2.1",
     "rc": "1.1.2",
@@ -50,12 +47,10 @@
   },
   "devDependencies": {
     "babel": "5.8.23",
-    "esdoc": "0.4.1",
     "chai": "3.3.0",
+    "esdoc": "0.4.1",
     "isparta": "3.1.0",
-    "mocha": "2.3.3",
-    "sails-memory": "0.10.5",
-    "sinon": "1.17.1"
+    "mocha": "2.3.3"
   },
   "scripts": {
     "clean": "rm -rf ./.tmp",
